# rcoalescence

./: .Rbuildignore  .Rhistory  .gitattributes  .gitignore  .gitmodules  DESCRIPTION  LICENSE  NAMESPACE  README.md  azure-pipelines.yml  cleanup  config.status  configure  configure.ac  configure.win  null
.azure/: azure-rcoalescence.yml
.azure/templates/: pkg-coverage.yml  pkg-install_dependencies.yml  pkg-rcmd_check.yml  r-setup-macOS.yml  r-setup-windows.yml
.circleci/: config.yml
R/: RcppCoalescenceModule.R  RcppExports.R  rcoalescence.R
inst/extdata/: examples_1.R  examples_4.R  examples_metacommunity.R  examples_nonspatial.R  examples_nonspatial_protracted.R  examples_spatial.R  examples_spatial_protracted.R
inst/extdata/m4/: aclocal.m4  boost.m4
inst/extdata/sample/: example_historical_fine.tif
man/: NeutralTree.Rd  NeutralTreeSimulation.Rd  ProtractedSpatialTree.Rd  ProtractedSpatialTreeSimulation.Rd  ProtractedTree.Rd  ProtractedTreeSimulation.Rd  SimulationParameteres.Rd  SpatialTree.Rd  SpatialTreeSimulation.Rd  SpeciationParameters.Rd  Tree.Rd  TreeSimulation.Rd  rcoalescence-package.Rd  rcoalescence.Rd
output/: data_12_1.db  data_1_10.db  data_204_1.db
src/: Makevars  Makevars.in  Makevars.win  Makevars.windows  RExposed.cpp  RGenericSpatialTreeSimulation.cpp  RGenericSpatialTreeSimulation.h  RLogging.cpp  RLogging.h  RMetacommunity.cpp  RMetacommunity.h  RProtractedSpatialTree.h  RProtractedSpatialTreeSimulation.h  RProtractedTree.h  RProtractedTreeSimulation.h  RSpatialSimulation.cpp  RSpatialTree.cpp  RSpatialTree.h  RSpatialTreeSimulation.cpp  RSpatialTreeSimulation.h  RTree.cpp  RTree.h  RTreeSimulation.cpp  RTreeSimulation.h  RcppExports.cpp  necsim
src/necsim/: .gitignore  ActivityMap.cpp  ActivityMap.h  AnalyticalSpeciesAbundancesHandler.cpp  AnalyticalSpeciesAbundancesHandler.h  Cell.cpp  Cell.h  Community.cpp  Community.h  ConfigParser.cpp  ConfigParser.h  DataMask.cpp  DataMask.h  DataPoint.cpp  DataPoint.h  DispersalCoordinator.cpp  DispersalCoordinator.h  GillespieCalculator.cpp  GillespieCalculator.h  Landscape.cpp  Landscape.h  LicenseHeader.h  LogFile.cpp  LogFile.h  Logger.h  Logging.cpp  Logging.h  Map.h  MapLocation.cpp  MapLocation.h  Matrix.h  Metacommunity.cpp  Metacommunity.h  NRrand.h  ProtractedSpatialTree.h  ProtractedTree.cpp  ProtractedTree.h  README.md  RNGController.h  SQLiteHandler.cpp  (+36 more)
src/necsim/eastl/: heap.h
src/necsim/ghc/: filesystem.hpp
tests/: testthat.R
tests/testthat/: defaultDump_main_101_0.csv  null  test_basic.R  test_metacommunity.R  test_nonspatial.R  test_protracted.R  test_spatial_basic.R  test_spatial_complex.R
tests/testthat/output/: data_12_1.db  data_1_10.db  data_1_11.db  data_201_1.db  data_202_3.db  data_203_3.db  data_204_1.db  data_205_1.db  data_206_1.db  data_303_3.db
tests/testthat/sample/: protracted_sample_results.csv  species_ages_example_results.csv  species_ages_example_results_single.csv
tools/: winlibs.R
vignettes/: .gitignore  bibliography.bib  rcoalescence-estimating-biodiversity-loss.Rmd  rcoalescence-simulating-island-species-abundances.Rmd  rcoalescence-vignette.Rmd
vignettes/images/: ifl_2016_pre.tif
